--- a/src/Vista/frmReportesOpPSucursales.form
+++ b/src/Vista/frmReportesOpPSucursales.form
@@ -15,10 +15,16 @@
               <Image iconType="3" name="/Iconos/icon-menu.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="MENU"/>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Arial" size="16" style="0"/>
+            </Property>
           </Properties>
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem1">
               <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Arial" size="16" style="0"/>
+                </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                   <Image iconType="3" name="/Iconos/icon-volver.png"/>
                 </Property>
@@ -26,6 +32,20 @@
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem1ActionPerformed"/>
+              </Events>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem3">
+              <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Arial" size="16" style="0"/>
+                </Property>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="3" name="/Iconos/icon-login.png"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="Cerrar Sesi&#xf3;n"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem3ActionPerformed"/>
               </Events>
             </MenuItem>
           </SubComponents>
@@ -36,10 +56,16 @@
               <Image iconType="3" name="/Iconos/icon-ayuda.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="AYUDA"/>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Arial" size="16" style="0"/>
+            </Property>
           </Properties>
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem2">
               <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Arial" size="16" style="0"/>
+                </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                   <Image iconType="3" name="/Iconos/icon-info.png"/>
                 </Property>
@@ -107,11 +133,11 @@
               <Component id="jLabel1" min="-2" pref="24" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jtlSucursales" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
-                  <Component id="jtlAnos" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
-                  <Component id="jtlMeses" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
-                  <Component id="btnFiltrar" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
-                  <Component id="btnMostrarTodo" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
+                  <Component id="jtlSucursales" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
+                  <Component id="jtlAnos" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
+                  <Component id="jtlMeses" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
+                  <Component id="btnFiltrar" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
+                  <Component id="btnMostrarTodo" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
               <Component id="jScrollPane1" pref="350" max="32767" attributes="0"/>
